snapper (0.10.7) stable; urgency=low

  * Updated to version 0.10.7

 -- Arvin Schnell <aschnell@suse.com>  Thu, 30 Nov 2023 09:30:41 +0000

snapper (0.10.6) stable; urgency=low

  * Updated to version 0.10.6

 -- Arvin Schnell <aschnell@suse.com>  Fri, 15 Sep 2023 07:30:38 +0000

snapper (0.10.5) stable; urgency=low

  * Updated to version 0.10.5

 -- Arvin Schnell <aschnell@suse.com>  Mon, 12 Jun 2023 05:14:33 +0000

snapper (0.10.4) stable; urgency=low

  * Updated to version 0.10.4

 -- Arvin Schnell <aschnell@suse.com>  Wed, 16 Dec 2022 08:18:46 +0000

snapper (0.10.3) stable; urgency=low

  * Updated to version 0.10.3

 -- Arvin Schnell <aschnell@suse.com>  Wed, 21 Sep 2022 11:59:53 +0000

snapper (0.10.2) stable; urgency=low

  * Updated to version 0.10.2

 -- Arvin Schnell <aschnell@suse.com>  Fri,  6 May 2022 08:08:57 +0000

snapper (0.10.1) stable; urgency=low

  * Updated to version 0.10.1

 -- Arvin Schnell <aschnell@suse.com>  Thu, 21 Apr 2022 09:35:06 +0000

snapper (0.10.0) stable; urgency=low

  * Updated to version 0.10.0

 -- Arvin Schnell <aschnell@suse.com>  Mon, 21 Mar 2022 17:29:07 +0000

snapper (0.9.1) stable; urgency=low

  * Updated to version 0.9.1

 -- Arvin Schnell <aschnell@suse.com>  Wed, 22 Sep 2021 09:16:12 +0000

snapper (0.9.0) stable; urgency=low

  * Updated to version 0.9.0

 -- Arvin Schnell <aschnell@suse.com>  Wed, 14 Apr 2021 14:15:48 +0000

snapper (0.8.15) stable; urgency=low

  * Updated to version 0.8.15

 -- Arvin Schnell <aschnell@suse.com>  Thu, 17 Dec 2020 10:22:04 +0000

snapper (0.8.14) stable; urgency=low

  * Updated to version 0.8.14

  * added option to cleanup to make requested free space available

 -- Arvin Schnell <aschnell@suse.com>  Wed, 23 Sep 2020 10:32:48 +0000

snapper (0.8.13) stable; urgency=low

  * Updated to version 0.8.13

  * call fsync after writing snapshot info file (bsc#1078336)

 -- Arvin Schnell <aschnell@suse.com>  Thu, 27 Aug 2020 12:35:09 +0000

snapper (0.8.12) stable; urgency=low
