@@ -52,6 +52,7 @@ TIMELINE_LIMIT_HOURLY="10"
 TIMELINE_LIMIT_DAILY="10"
 TIMELINE_LIMIT_WEEKLY="0"
 TIMELINE_LIMIT_MONTHLY="10"
+TIMELINE_LIMIT_QUARTERLY="0"
 TIMELINE_LIMIT_YEARLY="10"
 
 
